# pitagoras-linguistic-data-platform

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml  streamlit_app.py
apps/backend/: alembic.ini
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_document_metadata.py  0002_manual_document_ingestion.py
apps/backend/app/: main.py
apps/backend/app/api/routes/: documents.py  health.py
apps/frontend/: config.py  main.py
apps/frontend/api/: client.py
apps/frontend/ui/: feedback.py
apps/frontend/views/: document_list.py  manual_ingestion.py  pdf_upload.py
docker/: Dockerfile.backend
tests/: conftest.py
tests/integration/api/: test_documents.py  test_health.py
tests/integration/db/: test_migrations.py
tests/integration/frontend/: test_document_list_view.py  test_manual_ingestion_view.py  test_pdf_upload_view.py
tests/unit/: test_dependency_contract.py  test_runtime_parity_assets.py  test_smoke.py  test_test_hygiene.py
tests/unit/core/: test_alembic_config.py  test_db_lifecycle.py  test_schema.py  test_settings.py
tests/unit/frontend/: test_backend_client.py  test_config.py  test_shell_and_feedback.py  test_streamlit_launcher.py
tests/unit/models/: test_schemas.py
tests/unit/services/: test_document_service.py  test_pdf_ingestion.py
