[tool.poetry]
name = "pitagoras-linguistic-data-platform"
version = "0.1.0"
description = "A text-processing system for research into English language learning"
authors = ["LookAndCris <look.dev.aws@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
