[tool.poetry]
name = "pitagoras-linguistic-data-platform"
version = "0.1.0"
description = "A text-processing system for research into English language learning"
authors = ["LookAndCris <look.dev.aws@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
pydantic-settings = "^2.9.1"
sqlalchemy = "^2.0.41"
alembic = "^1.16.1"
psycopg = { version = "^3.3.4", extras = ["binary"] }
pypdf = "^6.1.1"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
httpx = "^0.28.1"
testcontainers = "^4.14.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
